failures/clang_other_error_vFSLkJ.i.stderr.txt
libsystemd-daemon.c:1:34: error: expected ')'
obsolete_lib(sd_booted,libsystemd-daemon);
                                 ^
libsystemd-daemon.c:1:13: note: to match this '('
obsolete_lib(sd_booted,libsystemd-daemon);
            ^
libsystemd-daemon.c:1:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_booted,libsystemd-daemon);
             ^
libsystemd-daemon.c:2:35: error: expected ')'
obsolete_lib(sd_is_fifo,libsystemd-daemon);
                                  ^
libsystemd-daemon.c:2:13: note: to match this '('
obsolete_lib(sd_is_fifo,libsystemd-daemon);
            ^
libsystemd-daemon.c:2:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_fifo,libsystemd-daemon);
             ^
libsystemd-daemon.c:3:33: error: expected ')'
obsolete_lib(sd_is_mq,libsystemd-daemon);
                                ^
libsystemd-daemon.c:3:13: note: to match this '('
obsolete_lib(sd_is_mq,libsystemd-daemon);
            ^
libsystemd-daemon.c:3:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_mq,libsystemd-daemon);
             ^
libsystemd-daemon.c:4:37: error: expected ')'
obsolete_lib(sd_is_socket,libsystemd-daemon);
                                    ^
libsystemd-daemon.c:4:13: note: to match this '('
obsolete_lib(sd_is_socket,libsystemd-daemon);
            ^
libsystemd-daemon.c:4:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_socket,libsystemd-daemon);
             ^
libsystemd-daemon.c:5:42: error: expected ')'
obsolete_lib(sd_is_socket_inet,libsystemd-daemon);
                                         ^
libsystemd-daemon.c:5:13: note: to match this '('
obsolete_lib(sd_is_socket_inet,libsystemd-daemon);
            ^
libsystemd-daemon.c:5:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_socket_inet,libsystemd-daemon);
             ^
libsystemd-daemon.c:6:42: error: expected ')'
obsolete_lib(sd_is_socket_unix,libsystemd-daemon);
                                         ^
libsystemd-daemon.c:6:13: note: to match this '('
obsolete_lib(sd_is_socket_unix,libsystemd-daemon);
            ^
libsystemd-daemon.c:6:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_socket_unix,libsystemd-daemon);
             ^
libsystemd-daemon.c:7:38: error: expected ')'
obsolete_lib(sd_is_special,libsystemd-daemon);
                                     ^
libsystemd-daemon.c:7:13: note: to match this '('
obsolete_lib(sd_is_special,libsystemd-daemon);
            ^
libsystemd-daemon.c:7:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_is_special,libsystemd-daemon);
             ^
libsystemd-daemon.c:8:38: error: expected ')'
obsolete_lib(sd_listen_fds,libsystemd-daemon);
                                     ^
libsystemd-daemon.c:8:13: note: to match this '('
obsolete_lib(sd_listen_fds,libsystemd-daemon);
            ^
libsystemd-daemon.c:8:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_listen_fds,libsystemd-daemon);
             ^
libsystemd-daemon.c:9:34: error: expected ')'
obsolete_lib(sd_notify,libsystemd-daemon);
                                 ^
libsystemd-daemon.c:9:13: note: to match this '('
obsolete_lib(sd_notify,libsystemd-daemon);
            ^
libsystemd-daemon.c:9:14: error: a parameter list without types is only allowed in a function definition
obsolete_lib(sd_notify,libsystemd-daemon);
             ^
libsystemd-daemon.c:10:35: error: expected ')'
obsolete_lib(sd_notifyf,libsystemd-daemon);
                                  ^
libsystemd-daemon.c:10:13: note: to match this '('
obsolete_lib(sd_notifyf,libsystemd-daemon);
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
